schema/testdata/errors/jobs_duplicate_names.keel
//expect-error:5:10:NamingError:There already exists a job with the name 'MyJob'
job MyJob {
    @schedule("* * * * *")
}

//expect-error:5:10:NamingError:There already exists a job with the name 'MyJob'
job MyJob {
    @schedule("* * * * *")
}
